[package]
name = "rustwi"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.8"
bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }